# prosight

./: .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  LICENCE  README.md
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_documents_process.py  test_tts_new_endpoints.py  test_tts_ws.py
apps/backend/app/: config.py  dependencies.py  main.py
apps/backend/app/db/: database.py  models.py
apps/backend/app/routers/: documents.py  health.py  tts.py  vision.py
apps/backend/app/schemas/: documents.py  health.py  tts.py  vision.py
apps/backend/app/services/: ocr.py  pdf.py  tts.py  vlm.py
apps/frontend/: README.md  app.json  package-lock.json  package.json
apps/frontend/app/: _layout.tsx  index.tsx
apps/frontend/app/(tabs)/: _layout.tsx  documents.tsx  settings.tsx  vision.tsx
apps/frontend/components/: AnalysisResult.tsx  DocumentsList.tsx  ImagePreview.tsx  PDFUploadScreen.tsx  ReaderView.tsx  SectionsMenu.tsx
apps/frontend/components/navigation/: TabBarIcon.tsx
apps/frontend/components/ui/: AudioPlayer.tsx  Button.tsx  ErrorBoundary.tsx  Header.tsx  LoadingScreen.tsx  LoadingSpinner.tsx  Text.tsx
apps/frontend/constants/: config.ts  database-schema.ts
apps/frontend/contexts/: AccessibilityContext.tsx
apps/frontend/hooks/: types.ts  useAPI.ts  useAudioPlayback.ts  useDatabase.ts  useDocumentStorage.ts  useFilePicker.ts  useImagePicker.ts
apps/frontend/services/: api.ts  database.ts  storage.ts
